# Skill-Localization-by-grafting

./: .gitignore  Grafting.py  README.md  pyproject.toml  run.py  run_experiment.sh  run_graft_experiment.sh  run_graft_task.sh
experiments/figure8_like/: README.md  run_mask_grid.sh  slurm_task_seed.sbatch  submit_slurm_mask_grid.sh
src/: graft_trainer.py  trainer.py
tools/: cache_hf_model.py  mask_overlap.py  setup_macos_rosetta.sh
